@@ -10,7 +10,8 @@
         "ASPNETCORE_ENVIRONMENT": "Development",
         "DOTNET_ENVIRONMENT": "Development",
         "DOTNET_DASHBOARD_OTLP_ENDPOINT_URL": "https://localhost:21276",
-        "DOTNET_RESOURCE_SERVICE_ENDPOINT_URL": "https://localhost:22088"
+        "DOTNET_RESOURCE_SERVICE_ENDPOINT_URL": "https://localhost:22088",
+        "AZURE_TENANT_ID": "7f745293-9c6e-4417-bd4a-7ec425de4438"
       }
     },
     "http": {
@@ -22,7 +23,8 @@
         "ASPNETCORE_ENVIRONMENT": "Development",
         "DOTNET_ENVIRONMENT": "Development",
         "DOTNET_DASHBOARD_OTLP_ENDPOINT_URL": "http://localhost:19195",
-        "DOTNET_RESOURCE_SERVICE_ENDPOINT_URL": "http://localhost:20234"
+        "DOTNET_RESOURCE_SERVICE_ENDPOINT_URL": "http://localhost:20234",
+        "AZURE_TENANT_ID": "7f745293-9c6e-4417-bd4a-7ec425de4438"
       }
     }
   }
